--- a/css/import/core.scss
+++ b/css/import/core.scss
@@ -1,18 +1,13 @@
 /*.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }*/
-.hidden { display: none; visibility: hidden; }
-.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
-.invisible { visibility: hidden; }
+// .hidden { display: none; visibility: hidden; }
+// .visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
+// .visuallyhidden.focusable:active,
+// .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
+// .invisible { visibility: hidden; }
 .clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }
 .clearfix:after { clear: both; }
 .clearfix { zoom: 1; }
-a:focus { 
-  outline: 0; 
-}
-a:hover, a:active { 
-  outline: 0; 
-}
+
 
 @media print {
   * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important;
