--- a/css/import/ss-social.scss
+++ b/css/import/ss-social.scss
@@ -7,27 +7,27 @@
 *
 * Upload this file to your web server
 * and place this within your <head> tags.
-* <link href="webfonts-ss/ss-FONTNAME.css" rel="stylesheet" />
+* <link href="webfonts/ss-FONTNAME.css" rel="stylesheet" />
 */
 
 @font-face {
   font-family: "SSSocial";
-  src: url('../webfonts-ss/ss-social-circle.eot');
-  src: url('../webfonts-ss/ss-social-circle.eot?#iefix') format('embedded-opentype'),
-       url('../webfonts-ss/ss-social-circle.woff') format('woff'),
-       url('../webfonts-ss/ss-social-circle.ttf') format('truetype'),
-       url('../webfonts-ss/ss-social-circle.svg#SSSocialCircle') format('svg');
+  src: url('../webfonts/ss-social-circle.eot');
+  src: url('../webfonts/ss-social-circle.eot?#iefix') format('embedded-opentype'),
+       url('../webfonts/ss-social-circle.woff') format('woff'),
+       url('../webfonts/ss-social-circle.ttf') format('truetype'),
+       url('../webfonts/ss-social-circle.svg#SSSocialCircle') format('svg');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SSSocial";
-  src: url('../webfonts-ss/ss-social-regular.eot');
-  src: url('../webfonts-ss/ss-social-regular.eot?#iefix') format('embedded-opentype'),
-       url('../webfonts-ss/ss-social-regular.woff') format('woff'),
-       url('../webfonts-ss/ss-social-regular.ttf') format('truetype'),
-       url('../webfonts-ss/ss-social-regular.svg#SSSocialRegular') format('svg');
+  src: url('../webfonts/ss-social-regular.eot');
+  src: url('../webfonts/ss-social-regular.eot?#iefix') format('embedded-opentype'),
+       url('../webfonts/ss-social-regular.woff') format('woff'),
+       url('../webfonts/ss-social-regular.ttf') format('truetype'),
+       url('../webfonts/ss-social-regular.svg#SSSocialRegular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
