--- a/css/import/ss-standard.scss
+++ b/css/import/ss-standard.scss
@@ -7,16 +7,16 @@
 *
 * Upload this file to your web server
 * and place this within your <head> tags.
-* <link href="webfonts-ss/ss-standard.css" rel="stylesheet" />
+* <link href="webfonts/ss-standard.css" rel="stylesheet" />
 */
 
 @font-face {
   font-family: "SSStandard";
-  src: url('../webfonts-ss/ss-standard.eot');
-  src: url('../webfonts-ss/ss-standard.eot?#iefix') format('embedded-opentype'),
-       url('../webfonts-ss/ss-standard.woff') format('woff'),
-       url('../webfonts-ss/ss-standard.ttf')  format('truetype'),
-       url('../webfonts-ss/ss-standard.svg#SSStandard') format('svg');
+  src: url('../webfonts/ss-standard.eot');
+  src: url('../webfonts/ss-standard.eot?#iefix') format('embedded-opentype'),
+       url('../webfonts/ss-standard.woff') format('woff'),
+       url('../webfonts/ss-standard.ttf')  format('truetype'),
+       url('../webfonts/ss-standard.svg#SSStandard') format('svg');
   font-weight: normal;
   font-style: normal;
 }
