--- a/css/style.scss
+++ b/css/style.scss
@@ -31,7 +31,7 @@
 @media 
 only screen and (-webkit-min-device-pixel-ratio: 2), 
 only screen and (min-resolution: 192dpi) { 
-    @import "styles/base";
+    @import "styles/retina";
 }
 
 .oldie{
