added border around image

--- a/css/styles/base.scss
+++ b/css/styles/base.scss
@@ -40,6 +40,7 @@ body{
         height: 75px;
         width: 75px;
         margin: 20px auto 0 auto;
+        border: 5px solid #fff;
         border-radius: 100px;
         -webkit-transition: width 0.25s linear, height 0.25s linear;
         -moz-transition: width 0.25s linear, height 0.25s linear;
