--- a/css/styles/base.scss
+++ b/css/styles/base.scss
@@ -22,10 +22,14 @@ body{
     color: lighten(#000, 30%);
     background: darken(#fff, 5%) url('../images/texture.png') 50% 50% repeat;
 }
-#main{
-    background: #fff;
+.ss-icon{
+    vertical-align: middle;
+}
+.module{
+background: rgba(255,255,255,0.7);
     border-radius: 6px;
     padding: 40px;
+    margin-bottom: 40px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -70,9 +74,64 @@ body{
     }
 }
 
-
+#cv{
+    overflow: visible;
+}
 h1{
     font-family: $jubilat;
     font-weight: 100;
     font-style: italic;
+}
+
+h2{
+    font-family: $futura;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 100;
+}
+
+
+.item, .special{
+    position: relative;
+    margin: 0 0 10px 0;
+    text-align: left;
+    span{
+        display: block;
+    }
+}
+.item{
+    padding-bottom: 10px;
+    border-bottom: $divider;
+    -webkit-transition: margin 0.25s linear;
+    -moz-transition: margin 0.25s linear;
+    transition: margin 0.25s linear;
+}
+.date{
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 100;
+    font-family: $futura;
+    -webkit-transition: top 0.25s linear, left 0.25s linear;
+    -moz-transition: top 0.25s linear, left 0.25s linear;
+    transition: top 0.25s linear, left 0.25s linear;
+}
+.title{
+    font-family: $futura;
+    font-weight: 500;
+    font-size: 15px;
+    color: lighten(#000, 40%);
+}
+.company{
+    font-family: $jubilat;
+    font-weight: 500;
+    font-size: 14px;
+    color: lighten(#000, 30%);
+}
+
+.location{
+    font-family: $futura;
+    font-weight: 300;
+    font-size: 13px;
+    font-style: italic;
+    color: lighten(#000, 40%);
 }
