--- a/css/styles/medium-screen.scss
+++ b/css/styles/medium-screen.scss
@@ -1,2 +1,17 @@
 /* Desktop Styles */
 /* min-width 960px */
+
+.item{
+    margin-left: 0;
+}
+.date{
+    position: absolute;
+    top: 0;
+    left: -155px;
+    width: 100px;
+    text-align: right;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 100;
+    font-family: $futura;
+}
