--- a/css/styles/small-screen.scss
+++ b/css/styles/small-screen.scss
@@ -34,3 +34,18 @@
         font-size: 14px;
     }
 }
+
+.item{
+    margin-left: 110px;
+}
+.date{
+    position: absolute;
+    top: 0;
+    left: -130px;
+    width: 100px;
+    text-align: right;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 100;
+    font-family: $futura;
+}
