--- a/css/styles/base.scss
+++ b/css/styles/base.scss
@@ -2,10 +2,10 @@
 $white: rgba(255,255,255,1); /* #ffffff */
 $blue: rgba(43,112,163,1); /* #2b70a3 */
 
-// $sans:  "proxima-nova", helvetica, tahoma, verdana, sans-serif;
 // $serif:  "proxima-nova", helvetica, tahoma, verdana, sans-serif;
 $jubilat: "jubilat",sans-serif;
-$futura: "futura-pt",sans-serif;
+$prox:  "proxima-nova", helvetica, tahoma, verdana, sans-serif;
+
 
 
 $divider: 1px solid rgba(229,229,229,1); /* #E5E5E5 */
@@ -56,7 +56,7 @@ background: rgba(255,255,255,0.7);
     }
     
     h2, a{
-        font-family: $futura;
+        font-family: $prox;
     }
     h2{
         margin: 0;
@@ -84,7 +84,7 @@ h1{
 }
 
 h2{
-    font-family: $futura;
+    font-family: $prox;
     font-size: 16px;
     text-transform: uppercase;
     font-weight: 100;
@@ -92,6 +92,7 @@ h2{
 
 
 .item, .special{
+    display: block;
     position: relative;
     margin: 0 0 10px 0;
     text-align: left;
@@ -101,37 +102,65 @@ h2{
 }
 .item{
     padding-bottom: 10px;
+    font-family: $prox;
+    color: lighten(#000, 40%);
     border-bottom: $divider;
     -webkit-transition: margin 0.25s linear;
     -moz-transition: margin 0.25s linear;
     transition: margin 0.25s linear;
 }
+.statement{
+    font-family: $jubilat;
+    font-weight: 600;
+    font-style: italic;
+    font-size: 19px;
+    line-height: 1.6;
+    border-top: $divider;
+    border-bottom: $divider;
+    padding: 25px 0;
+    margin: 25px 0;
+}
 .date{
     text-transform: uppercase;
-    font-size: 11px;
+    font-size: 13px;
     font-weight: 100;
-    font-family: $futura;
+    font-family: $prox;
     -webkit-transition: top 0.25s linear, left 0.25s linear;
     -moz-transition: top 0.25s linear, left 0.25s linear;
     transition: top 0.25s linear, left 0.25s linear;
 }
 .title{
-    font-family: $futura;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 15px;
-    color: lighten(#000, 40%);
 }
 .company{
-    font-family: $jubilat;
+    text-transform: uppercase;
     font-weight: 500;
-    font-size: 14px;
-    color: lighten(#000, 30%);
+    font-size: 12px;
 }
-
 .location{
-    font-family: $futura;
-    font-weight: 300;
-    font-size: 13px;
-    font-style: italic;
-    color: lighten(#000, 40%);
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 11px;
+}
+.description{
+    font-size: 14px;
+    line-height: 1.5;
+}
+.special{
+    margin-bottom: 5px;
+    .date{
+        position: static;
+        text-align: left;
+        font-size: 13px;
+        font-weight: normal;
+        width: auto;
+        -webkit-transition: opacity 0.25s linear;
+        -moz-transition: opacity 0.25s linear;
+        transition: opacity 0.25s linear;
+    }
+    .description{
+        border: none;
+        font-size: 12px;
+    }   
 }
