--- a/css/styles/small-screen.scss
+++ b/css/styles/small-screen.scss
@@ -15,23 +15,7 @@
     }
     .intro-copy{
         margin-left: 20px;
-        padding-top: 15px;
-    }
-    h1{
-        margin: 20px 0 0 0;
-    }
-    
-    h2, a{
-        font-family: $futura;
-    }
-    h2{
-        margin: 0;
-        text-transform: uppercase;
-        font-weight: 100;
-        font-size: 14px;
-    }
-    a{
-        font-size: 14px;
+        padding-top: 32px;
     }
 }
 
@@ -40,12 +24,16 @@
 }
 .date{
     position: absolute;
-    top: 0;
+    top: 5px;
     left: -130px;
     width: 100px;
     text-align: right;
     text-transform: uppercase;
     font-size: 11px;
     font-weight: 100;
-    font-family: $futura;
+}
+.special{
+    .date{
+        position: static;
+    }
 }
