--- a/css/styles/base.scss
+++ b/css/styles/base.scss
@@ -101,7 +101,8 @@ h2{
     }
 }
 .item{
-    padding-bottom: 10px;
+    padding: 0 0 35px 0;
+    margin-bottom: 35px;
     font-family: $prox;
     color: lighten(#000, 40%);
     border-bottom: $divider;
@@ -163,4 +164,28 @@ h2{
         border: none;
         font-size: 12px;
     }   
+}
+#awards{
+    font-family: $prox;
+    ul{
+        margin: 0;
+        padding: 0;
+    }
+    li{
+        list-style-type: none;
+        padding: 0;
+        width: 100%;
+        margin: 0 auto;
+        padding: 10px 0;
+    }
+    .award-title{
+        display: block;
+        text-transform: uppercase;
+        font-size: 12px;
+        font-weight: 700;
+    }
+    .award-description{
+        font-size: 14px;
+        line-height: 1.5;
+    }
 }
