--- a/css/styles/large-screen.scss
+++ b/css/styles/large-screen.scss
@@ -1,2 +1,9 @@
 /* Large Desktop Styles */
 /* min-width 1200px */
+#intro{
+    &.scroll{
+        top: 0;
+        left: 0;
+        width: auto;
+    }
+}
