--- a/css/styles/small-screen.scss
+++ b/css/styles/small-screen.scss
@@ -17,6 +17,23 @@
         margin-left: 20px;
         padding-top: 32px;
     }
+    &.scroll{
+        position: fixed;
+        top: 0;
+        width: 100% !important;
+        max-width: 100% !important;
+        z-index: 999;
+        background: #fff;
+        text-align: center;
+        @include animate;
+        @include fadeInDown;
+        -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.2);
+        #headshot{
+            height: 45px;
+            width: 45px;
+        }
+    }
 }
 
 .item{
