--- a/css/import/mixins.scss
+++ b/css/import/mixins.scss
@@ -1,7 +1,7 @@
 /* Mixins */
 
 
-/* Transparent Gradient */
+// Gradient
 @mixin transparent-gradient{
   background-image: linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.1) 100%);
   background-image: -o-linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.1) 100%);
@@ -11,73 +11,89 @@
   background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0, rgba(0,0,0,0.1)), color-stop(1, rgba(255,255,255,0.1)) );
 }
 
-
+// Gradient
 @mixin gradient($from, $to) {
-  /* fallback/image non-cover color */
   background-color: $from;
- 
-  /* Firefox 3.6+ */
   background-image: -moz-linear-gradient($from, $to);
- 
-  /* Safari 4+, Chrome 1+ */
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from($from), to($to));
- 
-  /* Safari 5.1+, Chrome 10+ */
   background-image: -webkit-linear-gradient($from, $to);
- 
-  /* Opera 11.10+ */
   background-image: -o-linear-gradient($from, $to);
 }
 
-
-
-/*  Border Radius */
-// .border-radius(@topright: 0, @bottomright: 0, @bottomleft: 0, @topleft: 0) {
-//   border-top-right-radius: @topright;
-//   border-bottom-right-radius: @bottomright;
-//   border-bottom-left-radius: @bottomleft;
-//   border-top-left-radius: @topleft;
-//   -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; 
-// }
-
-/* Opacity */
-// .opacity(@opacity: 0.5) {
-//   -moz-opacity: @opacity;
-//   -khtml-opacity: @opacity;
-//   -webkit-opacity: @opacity;
-//   opacity: @opacity;
-// }
-
-/*  Image Replacement */
-@mixin ir { 
-	display: block; 
-	text-indent: -999em; 
-	overflow: hidden; 
-	background-repeat: no-repeat; 
-	text-align: left; 
-	direction: ltr; 
+// Border Radius - Individual Corners
+@mixin radius-each($topleft: 0, $topright: 0, $bottomright: 0, $bottomleft: 0) {
+  border-top-left-radius: $topleft;
+  border-top-right-radius: $topright;
+  border-bottom-right-radius: $bottomright;
+  border-bottom-left-radius: $bottomleft;
+  -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
 }
 
-/* 	New Image Replacement Technique - http://www.zeldman.com/2012/03/01/replacing-the-9999px-hack-new-image-replacement/ */
-/*
-.ir{
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
+// Transition
+@mixin transition ($properties...) {
+  -webkit-transition: ($properties);
+  -moz-transition: ($properties);
+  -ms-transition: ($properties);
+  -o-transition: ($properties);
+  transition: ($properties);
 }
-*/
 
-// retina.less
-// A helper mixin for applying high-resolution background images (http://www.retinajs.com)
+// Border Radius
+@mixin radius($amount) {
+  border-radius: $amount;
+  -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
+}
 
-// @highdpi: ~"(-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (min-resolution: 1.5dppx)";
+//  Image Replacement
+@mixin ir {
+  display: block;
+  text-indent: -999em;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  text-align: left;
+  direction: ltr;
+}
 
-// .at2x(@path, @w: auto, @h: auto) {
-//   background-image: url(@path);
-//   @at2x_path: ~`@{path}.replace(/\.\w+$/, function(match) { return "@2x" + match; })`;
+// Box Model
+@mixin box {
+  // display: block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
-//   @media @highdpi {
-//     background-image: url("@{at2x_path}");
-//     background-size: @w @h;
-//   }
-// }
+// Sizing
+@mixin size($width, $height, $radius: 0) {
+  width: $width;
+  height: $height;
+  border-radius: $radius;
+}
+
+//Ellipsis
+@mixin ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+//Text Wrap
+@mixin wrap-text {
+  white-space: normal;
+  overflow: visible;
+}
+
+// ClearFix
+@mixin clearfix {
+  zoom: 1;
+  &:before, &:after {
+    content: "";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+}
+
+@mixin antialias {
+  -webkit-font-smoothing: antialiased;
+}
