--- a/css/styles/base.scss
+++ b/css/styles/base.scss
@@ -47,9 +47,7 @@ background: rgba(255,255,255,0.7);
         margin: 20px auto 0 auto;
         border: 5px solid #fff;
         border-radius: 100px;
-        -webkit-transition: width 0.15s linear, height 0.15s linear;
-        -moz-transition: width 0.15s linear, height 0.15s linear;
-        transition: width 0.15s linear, height 0.15s linear;
+        @include transition( (height 0.25s ease-in-out),(width 0.25s ease-in-out) );
     }
     h1{
         margin: 20px 0 0 0;
