--- a/css/styles/base.scss
+++ b/css/styles/base.scss
@@ -26,7 +26,7 @@ body{
     vertical-align: middle;
 }
 .module{
-background: rgba(255,255,255,0.7);
+    background: rgba(255,255,255,0.7);
     border-radius: 6px;
     padding: 40px;
     margin-bottom: 40px;
@@ -47,7 +47,6 @@ background: rgba(255,255,255,0.7);
         margin: 20px auto 0 auto;
         border: 5px solid #fff;
         border-radius: 100px;
-        @include transition( (height 0.25s ease-in-out),(width 0.25s ease-in-out) );
     }
     h1{
         margin: 20px 0 0 0;
@@ -57,7 +56,7 @@ background: rgba(255,255,255,0.7);
         font-family: $prox;
     }
     h2{
-        margin: 0;
+        margin: 0 0 5px 0;
         text-transform: uppercase;
         font-weight: 100;
         font-size: 14px;
@@ -69,6 +68,11 @@ background: rgba(255,255,255,0.7);
     }
     a{
         font-size: 14px;
+        text-decoration: none;
+        color: lighten(#000, 30%);
+        &:hover {
+            color: #000;
+        }
     }
 }
 
@@ -188,5 +192,24 @@ h2{
     }
     i {
         font-weight: 300;
+    }
+}
+
+#back-to-top {
+    display: block;
+    width: 300px;
+    max-width: 100%;
+    margin: 0 auto 20px;
+    font-size: 12px;
+    text-transform: uppercase;
+    text-align: center;
+    color: lighten(#000, 20%);
+    text-decoration: none;
+    padding: 20px 30px;
+    border: 1px solid lighten(#000, 40%);
+    @include radius(10px);
+    @include box;
+    &:hover {
+        background: $white;
     }
 }
